<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".FragmentKK">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:gravity="top">
        <TextView
                android:text="@string/tv_kk"
                android:layout_width="match_parent"
                android:layout_height="102dp" android:id="@+id/tv_kk"/>
        <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/kk_progress"/>
        <CheckBox
                android:text="@string/kk_syarat1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/kk_syarat1"/>
        <CheckBox
                android:text="@string/kk_syarat2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/kk_syarat2"/>
        <CheckBox
                android:text="@string/kk_syarat3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/kk_syarat3"/>
    </LinearLayout>
</FrameLayout>