<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".FragmentAktaLahir">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:gravity="top">
        <TextView
                android:text="@string/tv_akta_lahir"
                android:layout_width="match_parent"
                android:layout_height="102dp" android:id="@+id/tv_akta_lahir" tools:text="akta_lahir"/>
        <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/akta_lahir_progress"/>
        <CheckBox
                android:text="@string/akta_lahir_syarat1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/akta_lahir_syarat1"/>
        <CheckBox
                android:text="@string/akta_lahir_syarat2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/akta_lahir_syarat2"/>
        <CheckBox
                android:text="@string/akta_lahir_syarat3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/akta_lahir_syarat3"/>
    </LinearLayout>
</FrameLayout>